terraform-crm-blue-green/files/artifacts/tencent/non-production/Green/pvt-alb-ingress-crm-tencent-test-bg-rnd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:342262165274:certificate/28a3c863-8810-46e2-b312-9256eabe2f5b
    alb.ingress.kubernetes.io/group.name: tencent-test-bg-rnd
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-025cff0e891698e05, subnet-0b3222c70f626e12a, subnet-06f41f3e4588bf967
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: pvt-alb-ingress-crm-tencent-test-bg-rnd
  namespace: alb-rnd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /loadpage/*
        pathType: ImplementationSpecific
